test_programs/compile_failure/assert_constant_false/src/main.nr
fn main() {
    std::static_assert(false, "");
}
